--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,36 +1,63 @@
 <ion-header [translucent]="true">
 
-  <ion-toolbar class="ion-text-center my-header-title">
-    Envíos a todo México
-  </ion-toolbar>
+  <ion-toolbar class="my-header">
 
-  <ion-toolbar class="my-header" >
-      
-    <ion-img src="./assets/img/logo_blanco.png" class="my-logo" slot="start"></ion-img>
+    <ion-title class="ion-text-center">
+      Envíos a todo México
+    </ion-title>
 
-    <ion-button>
-      Obras
-    </ion-button>
+    <ion-grid>
 
-    <ion-button>
-      Artistas
-    </ion-button>
+      <ion-row no-padding no-margin>
 
-    <ion-buttons slot="end">
-      <ion-button>
-        <ion-icon name="search-outline" slot="icon-only"></ion-icon>
-      </ion-button>
-      <ion-button  >
-        <ion-icon name="person-outline" slot="icon-only"></ion-icon>
-      </ion-button>
-      <ion-button  >
-        <ion-icon name="heart-outline" slot="icon-only"></ion-icon>
-      </ion-button>
-      <ion-button  >
-        <ion-icon name="cart-outline" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-buttons>
+        <ion-col class="my-col-logo">
+          <ion-img src="./assets/img/logo_blanco.png" class="my-logo"></ion-img>
+        </ion-col>
 
+        <ion-col class="my-col-menu">
+          <ion-item lines="none">
+            <ion-buttons>
+              <ion-button>
+                <strong>
+                  Obras
+                </strong>
+                <ion-icon name="chevron-down-outline"></ion-icon>
+              </ion-button>
+          
+              <ion-button>
+                <strong>
+                  Artistas
+                </strong>
+                <ion-icon name="chevron-down-outline"></ion-icon>
+              </ion-button>
+            </ion-buttons>
+          </ion-item>
+        </ion-col>
+
+        <ion-col class="my-col-social">
+
+          <ion-item>
+            <ion-buttons>
+              <ion-button size="small">
+                <ion-img src="assets/img/recortes-57 (1).png"></ion-img>
+              </ion-button>
+              <ion-button size="small">
+                <ion-img src="assets/img/recortes-58 (1).png"></ion-img>
+              </ion-button>
+              <ion-button size="small">
+                <ion-img src="assets/img/recortes-60 (1).png"></ion-img>
+              </ion-button>
+              <ion-button size="small">
+                <ion-img src="assets/img/recortes-59 (1).png"></ion-img>
+              </ion-button>
+            </ion-buttons>     
+          </ion-item>
+
+        </ion-col>
+
+      </ion-row>
+    </ion-grid>
+          
   </ion-toolbar>
 
 </ion-header>
@@ -46,7 +73,7 @@
 
   <ion-card class="my-login-card">
 
-    <ion-item class="ion-text-center my-card-header" lines="none">
+    <ion-item class="ion-text-center my-title" lines="none">
       <ion-label>
         <ion-text>
           Iniciar <strong>sesión</strong>
@@ -91,6 +118,14 @@
   </ion-card>
 
   <hr>
+
+  <ion-item class="ion-text-center my-title" lines="none">
+    <ion-label>
+      <ion-text>
+        Crear <strong>Cuenta</strong>
+      </ion-text>
+    </ion-label>
+  </ion-item>
 
   <ion-card class="my-account-card">
     <ion-card-content>
@@ -173,4 +208,3 @@
 
 
 </ion-content>
-
