--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,32 +1,3 @@
-/*#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}*/
-
-
 // GENERAL TAGS
 
 a{
@@ -66,14 +37,7 @@ ion-text{
   }
 
   ion-grid{
-    padding-bottom: 10px;
-
-    .my-col-logo{
-      ion-img{
-        margin-left: 20px;
-        max-width: 190px;
-      }
-    }
+    padding-bottom: 8px;
 
     .my-col-menu{
       
@@ -89,24 +53,6 @@ ion-text{
       }
     }
 
-    .my-col-social{
-
-      ion-item{
-        --background: transparent;
-        color: white;
-        
-        ion-buttons{
-          margin-right: 26px;
-          margin-left: auto;
-
-          ion-button{
-            ion-img{
-            max-width: 16px;
-            }
-          }
-        }
-      }
-    }
   }
 }
 
@@ -123,36 +69,48 @@ ion-text{
   box-shadow: none !important;// IMPORTANT....
 
   
-
-  .my-input-item{
-    ion-text{
-      margin-left: 16px;
-      font-size: 14px;
-    }
-    ion-input{
-      border: #e2e2e2 solid 1px;
-      border-radius: 5px;
-      margin-top: 8px;
-    }
-  }
-
   .my-button{
     max-width: 80%;
     margin: 5px auto 10px auto;
+    height: 40px;
   }
 
 }
 
-
-
-
-.my-account-card{
-
-  ion-img{
-    max-width: 100px;
+.my-input-item{
+  ion-text{
+    margin-left: 16px;
+    font-size: 14px;
   }
+  ion-input{
+    border: #e2e2e2 solid 1px;
+    border-radius: 5px;
+    margin-top: 8px;
+  }
+}
 
 
+
+.my-two-cards{
+
+  max-width: 55%;
+  margin: 5px auto 10px auto;
+
+  .my-left-account-card, .my-right-account-card{
+
+    max-width: 300px;
+    display: inline-block;
+  
+    ion-img{
+      max-width: 80px;
+      margin: 5px auto 10px auto;
+    }
+  
+  
+  
+  
+  }
+  
 }
 
 
