--- a/src/app/components/options/options.component.html
+++ b/src/app/components/options/options.component.html
@@ -11,6 +11,11 @@
     </ion-button>
     <ion-button size="small">
       <ion-img src="assets/img/recortes-59 (1).png"></ion-img>
+      <span class="my-span">
+        <strong>
+          2
+        </strong>
+      </span>
     </ion-button>
   </ion-buttons>     
 </ion-item>
