--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,75 +1,76 @@
 // GENERAL TAGS
 
-a{
+a{  // LINKS
   color :#e03be0;
   font-weight: bold;
   font-size: 11px;
 }
 
-hr {
-  //border: 1px solid red !important;
+hr {  // COLOR DE LAS LINEAS
   background-color: #d8d8d8;
-  max-width: 75%;
-  visibility: visible !important;
-  margin: 10px auto 15px auto;
+  border-color: #d8d8d8;
 }
 
-ion-button{
+ion-button{ // ESTILO DE LOS BOTONES
   text-transform:none !important;
   --box-shadow:none;
 }
 
-ion-text{
+ion-text{   // COLOR DEL TEXTO
   color: #606060;
 }
 
 // CLASES
 
-.my-header{ 
+.my-header{   // ENCABEZADO
 
   --background: #1d1528;
   color: white;
 
-  ion-title{
+  ion-title{  // TITULO SUPERIOR
     font-size: 12px;
     padding-top: 12px;
     margin-bottom: 0px;
   }
 
-  ion-grid{
-    padding-bottom: 8px;
+  ion-grid{   // SEPARAR LOS ELEMENTOS EN CELDAS
+    padding-bottom: 6px;
 
-    .my-col-menu{
+    .my-col-menu{ // CASILLA DE ENMEDIO
       
-      ion-item{
+      ion-item{ // ITEMS
         --background: transparent;
         color: white;
         font-size: 20px;
 
-        ion-buttons{
+        ion-buttons{  // LOS 2 BOTONES
           margin-left: auto;
           margin-right: auto;
         }
       }
     }
-
   }
 }
 
-.my-title{
+.my-horizontal-hr{  // LINEA HORIZONTAL
+  max-width: 75%;
+  visibility: visible !important;
+  margin: 10px auto 15px auto;
+}
+
+.my-title{  // TITULO EN LOS FORMULARIOS
   font-size: 18px;
   margin-bottom: 20px;
 }
 
-.my-login-card{
+.my-login-card{ // FORMULARIO DE LOGIN
   
   max-width: 300px;
   margin: 30px auto 30px auto;
   padding-top: 20px;  
-  box-shadow: none !important;// IMPORTANT....
-
+  box-shadow: none !important;
   
-  .my-button{
+  .my-button{ // BOTON
     max-width: 80%;
     margin: 5px auto 10px auto;
     height: 40px;
@@ -77,12 +78,13 @@ ion-text{
 
 }
 
-.my-input-item{
-  ion-text{
+.my-input-item{ //TODOS LOS ITEMS CON TEXTO E INPUTS
+
+  ion-text{ // texto
     margin-left: 16px;
     font-size: 14px;
   }
-  ion-input{
+  ion-input{  // input
     border: #e2e2e2 solid 1px;
     border-radius: 5px;
     margin-top: 8px;
@@ -91,40 +93,36 @@ ion-text{
   }
 }
 
+.my-two-cards{  // DIV DE PAR DE FORMULARIOS INFERIORES
 
-.my-two-cards{
-
-  max-width: 800px;
+  max-width: 820px;
   margin: 5px auto 10px auto;
-  background-color: red;
+  
+  // ALINEAR AL CENTRO:
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  
 
-  .my-vertical-hr{
+  .my-vertical-hr{  // LINEA VERTICAL
     border: none;
-    border-left: 1px solid hsla(200, 10%, 50%,100);
-    height: 500px;
+    border-right: 0.5px solid hsla(200, 10%, 50%,100);
+    height: 440px;
     width: 1px; 
     display: inline-block;
-    border-color: #d8d8d8;
     vertical-align: middle;
-    
   }
 
-  .my-left-account-card{
-    margin-left: 0;
-  }
-  .my-right-account-card{
-    margin-right: 0;
-  }
+  ion-card{   // LAS 2 CARTAS/FORMULARIOS
 
-  .my-left-account-card, .my-right-account-card{
-
+    box-shadow: none !important;
     vertical-align: middle;
-    max-width: 320px;
+    max-width: 380px;
     display: inline-block;
-    padding-right: 1%;
-    padding-left: 1%;
+    padding-right: 6%;
+    padding-left: 6%;
 
-    .my-checkbox{
+    .my-checkbox{ // ITEM DEL CHECKBOX
       
       margin-top: 0px;
 
@@ -134,31 +132,34 @@ ion-text{
       }
     }
   
-    .my-card-img-right{
+    .my-card-img-right{ // IMAGEN DEL FORM DERECHO
       max-width: 45px;
     }
 
-    .my-card-img-left{
+    .my-card-img-left{  // IMAGEN DEL FORM IZQUIERDO
       max-width: 80px;
     }
 
-    ion-img{
+    ion-img{  // ALINEAR IMAGENES AL CENTRO
       margin: 5px auto 15px auto;
     }
 
-    ion-button{
+    ion-button{ // BOTONES
       max-width: 72%;
       margin: 10px auto 10px auto;
     }
 
-    .my-card-text{
-      font-size: 12px;
+    .my-card-text{  // TEXTO LARGO
+      font-size: 11px;
       width: 75%;
       margin: 5px auto 10px auto;
     }
 
-    .my-terms-text{
+    .my-terms-text{ // TEXTO DE TERMINOS & CONDICIONES
       font-size: 9px;
+      a{
+        font-size: 9px;
+      }
     }
   
   }
@@ -166,4 +167,20 @@ ion-text{
 }
 
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+}
 
