--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-menu side="end" content-id="myPage" menuId="myMenu">
-  <ion-header>
-    <ion-toolbar translucent>
+  <ion-header >
+    <ion-toolbar class="my-menu-header">
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
@@ -262,6 +262,24 @@
 
 
   </div>
+  </div>
+
+  <div class="my-scrollbar" >
+    
+    <ion-img src="./assets/img/recortes-34.png"></ion-img>
+
+    <div class="scrollbar">
+      <div class="force-overflow"></div>
+    </div>
+
+    <p>
+      Contáctanos
+    </p>
+
+    <ion-icon color="medium" name="logo-instagram"></ion-icon>
+    <ion-icon color="medium" name="logo-whatsapp"></ion-icon>
+    <ion-icon color="medium" name="logo-facebook"></ion-icon>    
+
   </div>
 
 </ion-content>
