--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -106,9 +106,9 @@ ion-text{   // COLOR DEL TEXTO
 
   .my-vertical-hr{  // LINEA VERTICAL
     border: none;
-    border-right: 0.5px solid hsla(200, 10%, 50%,100);
+    border-right: 0.5px solid #d8d8d8;
     height: 440px;
-    width: 1px; 
+    width: 0.5px; 
     display: inline-block;
     vertical-align: middle;
   }
@@ -166,21 +166,67 @@ ion-text{   // COLOR DEL TEXTO
   
 }
 
+.my-scrollbar{  // SCROLLBAR
 
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
+  float: right;
+  top: 7px;
+  right: 20px;
+  position:fixed;
+  display: block;
+  z-index: 100;
+
+  ion-img{  // IMAGEN
+    width: 70px;    
+    margin: 0px auto 0px auto;
+    display: block;
+  }
+
+  .scrollbar{ // DIV DEL SCROLLBAR
+    margin: 0 auto 25px auto;
+    height: 280px;
+    width: 8.5px;
+    background: #F5F5F5;
+    overflow-y: scroll;
+    display: block;
+
+    .force-overflow{
+      min-height: 450px;
+    }
+  }
+
+  .scrollbar::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 5px;
+    background-color: #F5F5F5;
+    height: 10px;
+  }
+
+  .scrollbar::-webkit-scrollbar{
+    width: 8px;
+    background-color: #F5F5F5;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #5015c2;
+  }
+
+  p{  //TEXTO
+    color: #606060;
+    transform: rotate(-90deg);
+    display: block;
+    margin: 50px auto 45px auto;
+  }  
+    
+  ion-icon{ // ICONOS
+    display: block;
+    margin: 0px auto 0px auto;
+  }
+  
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
+.my-menu-header{
+  --background: #1d1528;
+  color: white;
 }
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: red; 
-  border-radius: 10px;
-}
-
