--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -157,6 +157,7 @@ ion-text{   // COLOR DEL TEXTO
 
     .my-terms-text{ // TEXTO DE TERMINOS & CONDICIONES
       font-size: 9px;
+      margin-bottom: 0px;
       a{
         font-size: 9px;
       }
@@ -194,19 +195,19 @@ ion-text{   // COLOR DEL TEXTO
     }
   }
 
-  .scrollbar::-webkit-scrollbar-track{
+  .scrollbar::-webkit-scrollbar-track{  // PISTA
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     border-radius: 5px;
     background-color: #F5F5F5;
     height: 10px;
   }
 
-  .scrollbar::-webkit-scrollbar{
+  .scrollbar::-webkit-scrollbar{  // BARRA
     width: 8px;
     background-color: #F5F5F5;
   }
 
-  .scrollbar::-webkit-scrollbar-thumb{
+  .scrollbar::-webkit-scrollbar-thumb{ // MINIATURA
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #5015c2;
@@ -226,7 +227,7 @@ ion-text{   // COLOR DEL TEXTO
   
 }
 
-.my-menu-header{
+.my-menu-header{  // HEADER DE MENU
   --background: #1d1528;
   color: white;
 }
