--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -266,7 +266,7 @@
 
   <div class="my-scrollbar" >
     
-    <ion-img src="./assets/img/recortes-34.png"></ion-img>
+    <ion-img *ngIf="this.windowWidth >= 530" src="./assets/img/recortes-34.png"></ion-img>
 
     <div class="scrollbar">
       <div class="force-overflow"></div>
