--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -177,7 +177,7 @@ ion-text{   // COLOR DEL TEXTO
   z-index: 100;
 
   ion-img{  // IMAGEN
-    width: 70px;    
+    max-width: 70px;    
     margin: 0px auto 0px auto;
     display: block;
   }
