--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,3 +1,3 @@
-<ion-img *ngIf="img == 'big'" src="./assets/img/logo_blanco.png" class="my-logo-big"></ion-img>
+<ion-img *ngIf="img == 'big'" src="assets/img/logo_blanco.png" class="my-logo-big"></ion-img>
 
-<ion-img *ngIf="img == 'small'" src="./assets/img/recortes-34.png" class="my-logo-small"></ion-img>
+<ion-img *ngIf="img == 'small'" src="assets/img/recortes-34.png" class="my-logo-small"></ion-img>
